# ai-loc-tracker

./: README.md
.cursor/: mcp.json
backend/: .gitignore  LOG_LOCATION.md  README.md  pyproject.toml  requirements.txt  test_api.py
backend/logs/: .gitkeep
backend/src/: __init__.py  main.py
backend/src/api/: events.py  metrics.py
backend/src/models/: events.py
backend/src/services/: aggregator.py  calculator.py
backend/src/storage/: json_storage.py  jsonl_storage.py
mcp-server/: README.md  SIMPLIFIED_API.md  USAGE.md  WORKFLOW.md  check_cursor_integration.md  pyproject.toml  requirements.txt  run_server.sh  start.sh  test_call.py  test_connection.py  test_features.py  test_mcp.py  verify_setup.sh
mcp-server/src/: __init__.py  server.py
vscode-extension/: CHECK_SETTINGS.md  DEBUG.md  HOW_TO_ACTIVATE.md  KEYBINDINGS.md  README.md  TEST_RESULTS.md  TROUBLESHOOTING_TRACKING.md  check_settings.sh  package-lock.json  package.json  test-extension.js  tsconfig.json
vscode-extension/src/: api-client.ts  completion-tracker.ts  document-tracker.ts  extension.ts  metrics-view.ts
