[project]
name = "ai-code-metrics-backend"
version = "0.1.0"
description = "Backend API for tracking AI-augmented engineering metrics"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

